# cpp-lib

./: .gitattributes  .gitignore  .gitmodules  CODE_OF_CONDUCT.md  Dockerfile  Makefile  Makefile.am  Makefile.in  README.md  _config.yml  aclocal.m4  cls.hpp  config.h  config.h.in  config.status  configure  configure.ac  configure~  cpp.md  func.hpp  math.hpp  setupAutotools.sh
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: codeql-analysis.yml
autom4te.cache/: output.0  output.2  output.3  output.4  output.5  requests  traces.0  traces.1  traces.2  traces.3  traces.5
carrier/: linear.hpp
cls/carrier/: linear.hpp
cls/structure/: chain.hpp  cov.hpp  field.hpp  line.hpp
conn/sage/: plot.hpp  settings.hpp
conn/sage/scripts/: plotField.sage
data/045/: res45d4
data/045/data/: tmp.6u0PwMVAbF.data  tmp.7ZPrk4Yrch.data  tmp.Csr4YSzA9z.data  tmp.IOsnsnh2AD.data  tmp.IcfZZjYCwk.data  tmp.JIpsPm5dEU.data  tmp.O8PMCKBIPt.sage.py  tmp.SmjpBQrgKq.data  tmp.cpe2YOnJr4.data  tmp.qyrCIjPJmz.data  tmp.rX5k3qU0wD.data  tmp.w8xoQb2G4B.data  tmp.xIorFIrwK9.data
data/100/: res100d4
data/100/data/: tmp.9RW0gc5qOk.data  tmp.AVAV4zvdyI.data  tmp.TFTk6w8wR9.data  tmp.Wh7NxQhKaX.data  tmp.eI0iH1GX9M.data  tmp.gRCUjzcau7.sage.py  tmp.oE24bbz4JH.data  tmp.sdzJ28PnEv.data  tmp.tgAJh4qmuY.data  tmp.u1rDwR5p3B.data  tmp.v2m0TdfLgM.data  tmp.vQMvN9Tqhr.data  tmp.zH5twwA0lh.data
docs/: README.md  _config.yml
docs/cls/: readme.md
docs/cls/carrier/linear/: coord.md
func/boxCounting/: coverage.hpp
func/numerical/: integration.hpp
include/: Karabinerhaken.hh  Makefile  Makefile.am  Makefile.in  all.hh  batch.hh  cls.hh  cls.hpp  coord.hh  coordCarrier.hh  dim2.hh  dourk4.hh  dourk4.tt  field.hh  func.hh  func.tt  handle.hh  line.hh  linear.hh  mono.hh  mono.tt  nonDim.hh  numeric.hh  object.hh  oricoord.hh  orimono.hh  plot.hh  plot.tt  ring.hh  rk4.hh  rotate.hh  sets.hh  settings.hh  suu.hh  sys.hh  tracksTime.hh  translate.hh  units.hh
include/boxCounting/: Makefile  Makefile.in
include/cls/: Makefile  Makefile.am  Makefile.in  coord.hpp  cov.hpp  field.hpp  line.hpp  linear.hpp  matrix.hpp  mono.hpp  object.hpp
include/cls/carrier/: Makefile.am  Makefile.in  linear.hpp
include/cls/structure/: Karabinerhaken.hpp  Makefile.am  Makefile.in  cov.hpp  field.hpp  line.hpp
include/conn/: Makefile  Makefile.am  Makefile.in
include/conn/bash/: Makefile  Makefile.am  Makefile.in  arg.hpp  stdout.hpp
include/conn/sage/: Makefile  Makefile.am  Makefile.in  plot.cpp  plot.hpp  settings.hpp
include/func/: Makefile.am  Makefile.in
include/func/boxCounting/: Makefile.am  Makefile.in
include/func/numerical/: Makefile.am  Makefile.in
include/numerical/: Makefile  Makefile.in  integration.hpp  rk4.hpp
lib/: Makefile  Makefile.am  Makefile.in  cls.hh
lib/analysis/: Makefile.am  batch.hh  func.cc
lib/boxCounting/: Makefile  Makefile.in  coverage.hpp
lib/cls/: Karabinerhaken.cc  Karabinerhaken.cpp  Karabinerhaken.hh  Karabinerhaken.hpp  Karabinerhaken.tpp  Karabinerhaken.tt  Makefile.am  Makefile.in  coord.cc  coord.hh  coord.hpp  cov.cc  cov.hh  cov.hpp  cov.tpp  cov.tt  field.cc  field.hh  field.hpp  func.cc  line.cc  line.hh  linear.cc  linear.hh  matrix.cc  matrix.hh  mono.cc  mono.hh  mono.hpp  object.hh  oricoord.cc  orimono.cc  ring.cc  ring.hh  suu.cc  suu.hh  sys.cc
lib/cls/compact/: Makefile.am  Makefile.in  coord.cc  coord.hh
lib/concept/: Makefile.am
lib/concepts/: Makefile.am  Makefile.in  all.hh  animeFormat.hh  coordCarrier.hh  dim2.hh  logIncrPromise.hh  returnSame.hh  same.hh  tracksTime.hh
lib/conn/: Makefile  Makefile.am  Makefile.in
lib/conn/bash/: Makefile  Makefile.am  Makefile.in  arg.cpp  stdout.cc  stdout.cpp
lib/conn/sage/: Makefile  Makefile.am  Makefile.in  plot.cc  plot.cpp  plot.hh  plot.tt  settings.hh
lib/conn/signal/: Makefile.am  handle.cc
lib/dou/: Makefile.am  Makefile.in  mono.hh  mono.tt  sys.cc  sys.hh  sys.tt
lib/dou/geo/: Makefile.am  Makefile.in  dourk4.cc  rk4.cc  rk4.hh  rk4.tt
lib/dou/sys/: Makefile.am  carrier.hh
lib/dyn/: Makefile  Makefile.am  Makefile.in  mono.hh  mono.hpp  mono.tt  sim.cc  sim.cpp  sys.hh
lib/manip/: Makefile.am  Makefile.in  rotate.cc  rotate.hh  translate.cc  translate.hh
lib/manip/rigid/: rotation.hh  translation.cc  translation.hh
lib/numerical/: Makefile  Makefile.am  Makefile.in  func.cc  func.cpp  func.hh  func.tt  integration.cc  integration.cpp  integration.hh  rk4.cc  rk4.cpp  rk4.hh  rk4.hpp  rk4.tpp  rk4.tt
lib/numerical/.deps/: integration.Po
lib/signal/: Makefile.am  Makefile.in  handle.cc  handle.hh
main/: readme.md
main/cls/: readme.md
main/cls/carrier/linear/: coord.md
main/cls/compact/: readme.md
main/cls/structure/: Karabinerhaken.md
main/concepts/: readme.md
main/conn/bash/: stdout.md
main/conn/sage/: plot.md  settings.md
main/dou/: rk4.md
main/dou/geo/: rk4.md
main/dou/sys/: carrier.md
main/manip/: rotate.md  translate.md
main/numerical/: integration.md  rk4.md
math-dev/num-sol/: readme.md
phys-dev/: readme.md
phys-dev/JROFI/: DiscreteRefracLayers.md  discreteRefracLayers.md  readme.md
phys-dev/dyn-sim/: readme.md
phys-dev/dyn-sim/latex/: authblk-TI.sty  newlogo.eps  preprint_v1.clo  ptephy_v1.cls  report.tex
src/: Makefile  Makefile.am  Makefile.in  main.cc  main.cpp
src/.deps/: main.Po
src/CMF/.deps/: main.Po
src/JROFI/: IgN.cc  IgN.hh  Iv.cc  Iv.hh  IvSR.cc  IvSR.hh  NGrav=I.cc  NGravCorrect.cc  OelWasser.cc  SRv=I.cc  SRvelAdd.cc  discreteRefracLayers.cc  main.cc  refracGeometricMean.cc  refracTestPath.cc  testBezier.sage
src/JROFI/.deps/: main.Po
src/JROFI/test/: refraction.cc
src/test/: Makefile.am  condTerRK4.cc  ncku.cc  pendulum-ang.cc  polarcoord.cc  signal.cc  sys.cc
structure/: field.hpp
