include_HEADERS = \
				  same.hh nonDim.hh numeric.hh tracksTime.hh logIncrPromise.hh animeFormat.hh sameArgs.hh coordCarrier.hh dim2.hh \
				  coord.hh matrix.hh mono.hh linear.hh Karabinerhaken.hh line.hh field.hh cov.hh ring.hh suu.hh object.hh sys.hh sys.tt \
				  coord.tt matrix.tt mono.tt linear.tt Karabinerhaken.tt line.tt field.tt cov.tt object.tt \
				  handle.hh \
				  stdout.hh \
				  settings.hh plot.hh \
				  plot.tt \
				  integration.hh rk4.hh func.hh \
				  integration.tt rk4.tt func.tt \
				  dourk4.hh \
				  dourk4.tt \
				  translate.hh rotate.hh
