include_HEADERS = cls.hh \
				  same.hh nonDim.hh numeric.hh tracksTime.hh logIncrPromise.hh animeFormat.hh sameArgs.hh coordCarrier.hh dim2.hh \
				  coord.hh oricoord.hh matrix.hh mono.hh linear.hh Karabinerhaken.hh line.hh field.hh cov.hh ring.hh suu.hh object.hh sys.hh sys.tt \
				  mono.tt Karabinerhaken.tt cov.tt \
				  units.hh sets.hh \
				  handle.hh \
				  stdout.hh \
				  settings.hh plot.hh \
				  plot.tt \
				  integration.hh rk4.hh func.hh \
				  rk4.tt func.tt \
				  dourk4.hh \
				  dourk4.tt \
				  translate.hh rotate.hh
