include_HEADERS = coord.hh matrix.hh mono.hh linear.hh Karabinerhaken.hh line.hh field.hh cov.hh ring.hh suu.hh

noinst_LIBRARIES = libinstcoord.a libinstmatrix.a libinstmono.a libinstlinear.a libinstkarabinerhaken.a libinstline.a libinstfield.a libinstcov.a libinstring.a libinstsuu.a

libinstcoord_a_SOURCES = coord.cc
libinstmatrix_a_SOURCES = matrix.cc
libinstmono_a_SOURCES = mono.cc
libinstlinear_a_SOURCES = linear.cc
libinstkarabinerhaken_a_SOURCES = Karabinerhaken.cc
libinstline_a_SOURCES = line.cc
libinstfield_a_SOURCES = field.cc
libinstcov_a_SOURCES = cov.cc
libinstring_a_SOURCES = ring.cc
libinstsuu_a_SOURCES = suu.cc
